# seanifyv2-backend

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  endpoints  logfile
migrations/: 202209121757_users.sql  20220929233737_playlist.sql  20220929233749_songs.sql  20220929235637_users.sql  20221031172740_playlist.sql  20221121013444_playlist.sql  20221121013521_songs.sql  20221121013522_users.sql  20221124031802_songs.sql
src/: api.rs  fuzzy.rs  main.rs  types.rs  youtube.rs
src/api/: routes.rs
src/api/messages/: handlers.rs  routes.rs
src/api/playlist/: handlers.rs  routes.rs
src/api/songs/: handlers.rs  routes.rs
src/api/users/: handlers.rs  routes.rs
src/extractors/: claims.rs
src/middlewares/: err_handlers.rs  security_headers.rs
