[package]
name = "seanify-backendv2"
version = "0.1.0"
authors = ["Sean Ray <seanray410@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.2"
actix-web = { version = "4.1.0" , features = ["rustls"] }
actix-web-httpauth = "0.8.0"
actix-web-actors = "4.1.0"
actix = "0.13.0"
derive_more = "^0.99.17"
reqwest = "0.11.11"
dotenv = "^0.15.0"
pretty_env_logger = "0.4.0"
log = "0.4.17"
envy = "^0.4.2"
jsonwebtoken = "^8.1.1"
serde = "1.0.144"
serde_json = "1.0.85"
futures = "0.3.24"
sqlx = { version = "0.6.1", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
lazy_static = "1.4.0"
mp3-metadata = "0.3.4"
anyhow = "1.0.65"
async_once = "0.2.6"
blake3 = "1.3.1"
#rayon
